# Yaren-Piernas

./: Readme.txt
package_robot/: CMakeLists.txt  package.xml
yaren_piernas_comunication/: nodo_publisher.py  nodo_python.py  nodo_rospy.py  notes.txt
yaren_piernas_comunication/src/: communication.py
yaren_piernas_description/: CMakeLists.txt  package.xml
yaren_piernas_description/config/: joint_names_yaren_piernas_description.yaml  joint_trajectory_controller.yaml
yaren_piernas_description/launch/: display.launch  gazebo.launch  yaren_piernas_description.launch
yaren_piernas_description/meshes/: Cadera_Link.STL  CoxisD_Link.STL  CoxisI_Link.STL  MusloD3_Link.STL  MusloD5_Link.STL  MusloI4_Link.STL  MusloI6_Link.STL  PantorrillaD_Link.STL  PantorrillaI_Link.STL  PieD11_Link.STL  PieD9_Link.STL  PieI10_Link.STL  PieI12_Link.STL
yaren_piernas_description/urdf/: yaren_piernas_description.csv  yaren_piernas_description.urdf
yaren_piernas_gazebo/launch/: empty_world.xml  yaren_piernas_walk.launch  yaren_piernas_world.launch
yaren_piernas_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yaren_piernas_moveit_config/config/: fake_controllers.yaml  gazebo_yaren_piernas_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  yaren_piernas_description.srdf
yaren_piernas_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_yaren_piernas_sim.launch  gazebo.launch  (+11 more)
